# AndroidFlipperZeroKBD

./: .gitignore  LICENSE  Makefile  README.md
.cursor/rules/: no-cursor-commit-trailer.mdc
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: keyboard.json
android/app/src/main/assets/layouts/: catalog.json  macos_en.json  macos_ru.json  macos_ua.json  mx_mini_en.json  mx_mini_ru.json  mx_mini_ua.json  number.json
android/app/src/main/assets/layouts/languages/: catalog.json  en.json  ru.json
android/app/src/main/assets/layouts/templates/: catalog.json  macos.json  number.json  pc.json
android/app/src/main/java/com/flipperzero/androidkeyboard/: BridgeSession.kt  InputSink.kt  (+3 more)
android/app/src/main/res/drawable/: bg_ble_button.xml  bg_layout_banner.xml  bg_mode_chip.xml  bg_mode_switch.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_keyboard.xml  activity_settings.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docs/: ANDROID.md  BUILD.md  FLIPPER.md  PROTOCOL.md
flipper/android_keyboard_bridge/: README.md  android_keyboard_bridge.c  android_keyboard_bridge.h  application.fam  changelog.md  protocol.c  protocol.h  screenshot.c  screenshot.h  usb_hid_bridge.c  usb_hid_bridge.h
flipper/android_keyboard_bridge_rust/: .gitignore  Cargo.toml  README.md
flipper/android_keyboard_bridge_rust/.cargo/: config.toml
flipper/android_keyboard_bridge_rust/src/: app.rs  ble.rs  main.rs  protocol.rs  shared.rs  usb_hid.rs  viewport.rs
(+13 files in other folders)
